[project]
name = "YourVacationAgent"
version = "0.1.0"
description = "your vacation agent"
readme = "README.md"
requires-python = "~=3.12.0"
authors = [
    { name = "Selin Gungor" },
]

dependencies = [
    "ipykernel>=6.29.5,<7.0.0",
    "langchain-google-genai>=2.0.1,<3.0.0",
    "langchain>=0.3.4,<0.4.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "langchain-google-vertexai>=2.0.5,<3.0.0",
    "langchain-experimental>=0.3.2,<0.4.0",
    "google-genai>=1.10.0,<2.0.0",
    "numpy>=2.2.4,<3.0.0",
    "sacrebleu>=2.5.1,<3.0.0",
    "rouge>=1.0.1,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pydantic[email]>=2.11.7,<3.0.0",
    "fastmcp>=3.2.0,<4.0.0",
    "litellm==1.83.0",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.8",
    "google-adk~=1.28.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5,<7.0.0",
]


[tool.ruff]
line-length = 150
exclude = [
    'exercises',
]

[tool.black]
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | exercises
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"